# onnc-runtime

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  code_generator.py  convert-tensor-to-jpeg.py  dump.py  file-context.c  input-from-memory.c  interpreter.py  main.cpp  onnc-runtime-internal.h  onnc-runtime-operator.c  onnc-runtime.c  onnc-runtime.h  operator.template.c  output-from-memory.c  run-in-docker.sh  weight-from-memory.c
cmake/: FindSkyPat.cmake  Findonnx.cmake
docker/: CMakeLists.txt  Dockerfile
generator/: ComputeVisitor.h  Interpreter.template.cpp  Interpreter.visitor.template.cpp  code_generator.py  generate_operator.py  operator.template.c
interpreter/: CMakeLists.txt  main.cpp
operator/: abs.c  acos.c  add.c  affine.c  and.c  argmax.c  argmin.c  asin.c  atan.c  aten.c  averagepool.c  batchnormalization.c  cast.c  ceil.c  clip.c  concat.c  constant.c  constant.h  constantfill.c  conv.c  convtranspose.c  cos.c  crop.c  depthtospace.c  div.c  dropout.c  elu.c  equal.c  exp.c  flatten.c  floor.c  gather.c  gemm.c  giventensorfill.c  globalaveragepool.c  globallppool.c  globalmaxpool.c  greater.c  gru.c  gruunit.c  (+81 more)
src/: CMakeLists.txt
src/include/: file-context.h  input-from-memory.h  onnc-runtime-internal.h  onnc-runtime.h  output-from-memory.h  weight-from-memory.h
src/include/operator/: aten.h  concat.h  if.h  loop.h  max.h  mean.h  min.h  split.h  sum.h
src/lib/: file-context.c  input-from-memory.c  main-file-file-file.c  onnc-runtime-operator.c  onnc-runtime.c  output-from-memory.c  weight-from-memory.c
src/lib/operator/: abs.c  acos.c  add.c  affine.c  and.c  argmax.c  argmin.c  asin.c  atan.c  aten.c  averagepool.c  batchnormalization.c  cast.c  ceil.c  clip.c  concat.c  constant.c  constantfill.c  conv.c  convtranspose.c  cos.c  crop.c  depthtospace.c  div.c  dropout.c  elu.c  equal.c  exp.c  flatten.c  floor.c  gather.c  gemm.c  giventensorfill.c  globalaveragepool.c  globallppool.c  globalmaxpool.c  greater.c  gru.c  gruunit.c  hardmax.c  (+75 more)
test/: CMakeLists.txt
test/unittests/: CMakeCache.txt  CMakeLists.txt  test_operator_abs.cpp  test_operator_acos.cpp  test_operator_add.cpp  test_operator_affine.cpp  test_operator_and.cpp  test_operator_argmax.cpp  test_operator_argmin.cpp  test_operator_asin.cpp  test_operator_atan.cpp  test_operator_averagepool.cpp  test_operator_batchnormalization.cpp  test_operator_ceil.cpp  test_operator_clip.cpp  test_operator_cos.cpp  test_operator_div.cpp  test_operator_equal.cpp  test_operator_exp.cpp  test_operator_flatten.cpp  test_operator_floor.cpp  test_operator_gemm.cpp  test_operator_globalaveragepool.cpp  test_operator_globallppool.cpp  test_operator_globalmaxpool.cpp  test_operator_greater.cpp  test_operator_hardsigmoid.cpp  test_operator_instancenormalization.cpp  test_operator_leakyrelu.cpp  test_operator_less.cpp  test_operator_log.cpp  test_operator_lpnormalization.cpp  test_operator_lppool.cpp  test_operator_matmul.cpp  test_operator_max.cpp  test_operator_maxpool.cpp  test_operator_mean.cpp  test_operator_min.cpp  test_operator_mul.cpp  test_operator_multinomial.cpp  (+25 more)
test/unittests/SkyPat/tmp/: Ext_SkyPat-cfgcmd.txt
